--- a/app/src/declaration/view/lock-dialog.html
+++ b/app/src/declaration/view/lock-dialog.html
@@ -5,7 +5,7 @@
             <div class="md-toolbar-tools">
                 <h2>Afslut sagen</h2>
                 <span flex></span>
-                <md-button class="md-icon-button" ng-click="vm.cancel()">
+                <md-button class="md-icon-button" ng-click="cancel()">
                     <i class="material-icons" aria-label="Luk dialogboks">close</i>
                 </md-button>
             </div>
@@ -16,6 +16,19 @@
                 <md-radio-button value="closed"> Afsluttet</md-radio-button>
                 <md-radio-button value="no-declaration">  Afsluttet uden erklæring</md-radio-button>
             </md-radio-group>
+
+            <!-- <md-autocomplete flex 
+            md-selected-item="case.reason" 
+            md-search-text="reasonSearch"
+            md-items="reason in dropdownFilter(dropdownOptions['noDeclarationReason'],reasonSearch,['displayName'])" 
+            md-item-text="reason.displayName" 
+            md-min-length="0" 
+            md-floating-label="Årsag">
+            <md-item-template>
+                <span md-highlight-text="reasonSearch" md-highlight-flags="gi">{{reason.displayName}}</span>
+            </md-item-template>
+        </md-autocomplete> -->
+
             <span ng-show="currentCase.closed == 'no-declaration'">
                 <md-input-container class="md-block">
                 <label>Årsag</label> 
@@ -23,7 +36,7 @@
             </md-input-container>
             <md-input-container class="md-block">
                 <label>Sendt til</label> 
-                <input type="text" name="sent-to" ng-model="currentCase.sentTo">
+                <input type="text" name="sentTo" ng-model="currentCase.sentTo">
             </md-input-container>
             </span>
         </md-dialog-content>
