--- a/app/src/declaration/view/sections/basic-info.html
+++ b/app/src/declaration/view/sections/basic-info.html
@@ -11,7 +11,7 @@
         </md-input-container>-->
         <md-input-container class="md-block">
             <label>CPR</label>
-            <input ng-model="case.cprNumber" ng-disabled="!editPatientData" required>
+            <input ng-model="case.cprNumber" maxlength="10" ng-disabled="!editPatientData" required>
         </md-input-container>
         <md-input-container class="md-block">
             <label>Fornavne</label>
@@ -28,7 +28,7 @@
         <div layout="row">
             <md-input-container flex="25">
                 <label>Postnr.</label>
-                <input ng-model="case.postbox" ng-pattern="/^[0-9]{4}$/" ng-disabled="!editPatientData">
+                <input ng-model="case.postbox" maxlength="4" ng-disabled="!editPatientData">
             </md-input-container>
             <md-input-container flex>
                 <label>By</label>
@@ -39,7 +39,7 @@
         <md-autocomplete flex 
             md-selected-item="case.ethnicity" 
             md-search-text="ethnicitySearch"
-            md-items="ethnicity in dropdownOptions['ethnicity']" 
+            md-items="ethnicity in dropdownFilter(dropdownOptions['ethnicity'],ethnicitySearch,['displayName'])" 
             md-item-text="ethnicity.displayName" 
             md-min-length="0" 
             md-floating-label="Etnicitet"
@@ -52,7 +52,7 @@
         <md-autocomplete flex 
             md-selected-item="case.motherEthnicity" 
             md-search-text="motherEthnicitySearch"
-            md-items="ethnicity in dropdownOptions['ethnicity']" 
+            md-items="ethnicity in dropdownFilter(dropdownOptions['ethnicity'],motherEthnicitySearch,['displayName'])" 
             md-item-text="ethnicity.displayName" 
             md-min-length="0" 
             md-floating-label="Mors etnicitet"
@@ -65,7 +65,7 @@
         <md-autocomplete flex 
             md-selected-item="case.fatherEthnicity" 
             md-search-text="fatherEthnicitySearch"
-            md-items="ethnicity in dropdownOptions['ethnicity']" 
+            md-items="ethnicity in dropdownFilter(dropdownOptions['ethnicity'],fatherEthnicitySearch,['displayName'])" 
             md-item-text="ethnicity.displayName" 
             md-min-length="0" 
             md-floating-label="Fars etnicitet"
