--- a/app/src/declaration/view/sections/doctor-board.html
+++ b/app/src/declaration/view/sections/doctor-board.html
@@ -7,7 +7,7 @@
     <md-card-content>
         <md-radio-group ng-model="case.forensicDoctorCouncil" ng-disabled="!editPatientData">
 
-            <md-radio-button value="Ikke forelagt">Ikke forelagt</md-radio-button>
+            <md-radio-button value="Ikke-forelagt">Ikke forelagt</md-radio-button>
             <md-radio-button value="Enig"> Enig </md-radio-button>
             <md-radio-button value="Uenig">Uenig</md-radio-button>
 
