--- a/app/src/declaration/view/document-toolbar.html
+++ b/app/src/declaration/view/document-toolbar.html
@@ -1,7 +1,9 @@
+<span ng-if="!case.hasOwnProperty('closed')">
 <span class="toolbar-contextual" ng-if="'declaration.show.documents.edit' | isState">
-    <md-button class="md-icon-button" aria-label="edit">
-        <md-icon>remove_red_eye</md-icon>
-    </md-button>
+
+     <md-button class="md-icon-button" aria-label="download" ng-click="downloadDocuments($event)">
+        <md-icon>file_download</md-icon>
+    </md-button> 
     <md-button class="md-icon-button" aria-label="edit" ng-click="deleteDocumentsDialog($event)">
         <md-icon>delete</md-icon>
     </md-button>
@@ -14,3 +16,8 @@
 <md-button class="md-icon-button" aria-label="view" ng-click="toggleDocumentView()">
     <md-icon>{{toggleIcon}}</md-icon>
 </md-button>
+</span>
+
+<span ng-if="case.hasOwnProperty('closed')">
+    <md-icon>done</md-icon> Sagen er afsluttet
+</span>
