--- a/app/src/declaration/view/document-view.html
+++ b/app/src/declaration/view/document-view.html
@@ -1,3 +1,3 @@
-her skal dokumentet vises
-
-<ng-include src="viewerTemplateUrl"></ng-include>
+<div style="max-width:1500px; overflow: auto;">
+    <ng-include src="viewerTemplateUrl"></ng-include>
+</div>
