--- a/app/src/declaration/view/sections/declaration.html
+++ b/app/src/declaration/view/sections/declaration.html
@@ -9,31 +9,31 @@
         <md-autocomplete flex 
             md-selected-item="case.placement" 
             md-search-text="placementSearch"
-            md-items="placement in dropdownFilter(dropdownOptions['placement'],placementSearch,['displayName'])" 
-            md-item-text="placement.displayName" 
+            md-items="placement in dropdownFilter(dropdownOptions['placement'],placementSearch)" 
+            md-item-text="placement" 
             md-min-length="0" 
             md-floating-label="Placering"
             ng-disabled="!editPatientData">
             <md-item-template>
-                <span md-highlight-text="placementSearch" md-highlight-flags="gi">{{placement.displayName}}</span>
+                <span md-highlight-text="placementSearch" md-highlight-flags="gi">{{placement}}</span>
             </md-item-template>
         </md-autocomplete>
-        <md-tooltip md-direction="top" md-delay="500" ng-if="case.placement != null">{{case.placement.displayName}}</md-tooltip>
+        <md-tooltip md-direction="top" md-delay="500" ng-if="case.placement != null">{{case.placement}}</md-tooltip>
         </div>
         <div>
         <md-autocomplete flex 
             md-selected-item="case.sanctionProposal" 
             md-search-text="sanctionProposalSearch"
-            md-items="sanctionProposal in dropdownFilter(dropdownOptions['sanctionProposal'],sanctionProposalSearch,['displayName'])" 
-            md-item-text="sanctionProposal.displayName" 
+            md-items="sanctionProposal in dropdownFilter(dropdownOptions['sanctionProposal'],sanctionProposalSearch)" 
+            md-item-text="sanctionProposal" 
             md-min-length="0" 
             md-floating-label="Sanktionsforslag"
             ng-disabled="!editPatientData">
             <md-item-template>
-                <span md-highlight-text="sanctionProposalSearch" md-highlight-flags="gi">{{sanctionProposal.displayName}}</span>
+                <span md-highlight-text="sanctionProposalSearch" md-highlight-flags="gi">{{sanctionProposal}}</span>
             </md-item-template>
         </md-autocomplete>
-        <md-tooltip md-direction="top" md-delay="500" ng-if="case.sanctionProposal != null">{{case.sanctionProposal.displayName}}</md-tooltip>
+        <md-tooltip md-direction="top" md-delay="500" ng-if="case.sanctionProposal != null">{{case.sanctionProposal}}</md-tooltip>
         </div>
 
         <p class="md-subhead">Afgivet af<br></p>
