--- a/app/src/shared/services/document/preview/view/pdf.html
+++ b/app/src/shared/services/document/preview/view/pdf.html
@@ -1,3 +1,3 @@
 <div>
-    <iframe id="pdf" name="pdf" ng-src="{{ config.contentUrl }}" style="width: 99%; height: 500px"></iframe>
+    <iframe id="pdf" name="pdf" ng-src="{{ config.contentUrl }}" style="width: 100%; height: calc(100vh - 136px)"></iframe>
 </div>
