implemented advanced search

--- a/app/src/declaration/view/search.html
+++ b/app/src/declaration/view/search.html
@@ -1,4 +1,4 @@
-<div layout="row" layout-align="center center" ng-show="!showFilters">
+<div layout="row" layout-align="center center">
     <div layout="column" style="height:144px" flex-gt-sm="50" flex>
         <span flex></span>
         <div layout="row">
@@ -27,7 +27,3 @@
         </div>
     </div>
 </div>
-
-<ng-include src="'app/src/declaration/view/search-advanced.html'" ng-show="showFilters"></ng-include>
-
-<!-- <ng-include src="'app/src/declaration/view/waitinglist.html'"></ng-include> -->
