--- a/app/src/declaration/view/waitinglist.html
+++ b/app/src/declaration/view/waitinglist.html
@@ -8,7 +8,7 @@
                         <th md-column md-order-by="fullName">Navn</th>
                         <th md-column md-numeric md-order-by="cprNumber">CPR</th>
                         <th md-column md-numeric>Oprettet</th>
-                        <th md-column md-numeric>Liggetid (dage)</th>
+                        <th md-column md-numeric>Ventetid (dage)</th>
                     </tr>
                 </thead>
                 <tbody md-body ng-repeat="case in waitingListCases">
