--- a/app/src/declaration/view/search-advanced.html
+++ b/app/src/declaration/view/search-advanced.html
@@ -1,52 +1,69 @@
-<div layout="row" layout-align="center center">
+<div layout="row" layout-align="center center" ng-show="!results">
     <div layout="column" flex="50">
         <div layout="column">
-            <div>
-            <md-button class="md-icon-text-button" ng-click="toggleFilters()">
-                <md-icon>arrow_back</md-icon>
-                tilbage til søgning
-            </md-button>
+            <div style="height:50px">
             </div>
         </div>
         <span class="md-title">Vis alle sager med:</span>
         <br>
         <div layout="row">
             <div flex="45">
-                <md-autocomplete md-selected-item="searchParams.mainCharge" md-search-text="mainChargeSearch" md-items="mainCarge in dropdownFilter(dropdownOptions['mainCharge'],mainChargeSearch,['displayName'])"
-                    md-item-text="mainCarge.displayName" md-min-length="0" md-floating-label="Hovedsigtelse">
+                <md-autocomplete 
+                md-selected-item="searchParams.mainCharge" 
+                md-search-text="mainChargeSearch" 
+                md-items="mainCarge in dropdownFilter(dropdownOptions['mainCharge'],mainChargeSearch)"
+                    md-item-text="mainCarge" 
+                    md-min-length="0" 
+                    md-floating-label="Hovedsigtelse">
                     <md-item-template>
-                        <span md-highlight-text="mainChargeSearch" md-highlight-flags="gi">{{mainCarge.displayName}}</span>
+                        <span md-highlight-text="mainChargeSearch" md-highlight-flags="gi">{{mainCarge}}</span>
                     </md-item-template>
                 </md-autocomplete>
-                <md-tooltip md-direction="top" md-delay="500" ng-if="searchParams.mainCharge != null">{{searchParams.mainCharge.displayName}}</md-tooltip>
+                <md-tooltip md-direction="top" md-delay="500" ng-if="searchParams.mainCharge != null">{{searchParams.mainCharge}}</md-tooltip>
             </div>
 
             <div flex flex-offset="10">
-                <md-autocomplete md-selected-item="searchParams.placement" md-search-text="placementSearch" md-items="placement in dropdownFilter(dropdownOptions['placement'],placementSearch,['displayName'])"
-                    md-item-text="placement.displayName" md-min-length="0" md-floating-label="Placering">
+                <md-autocomplete 
+                md-selected-item="searchParams.placement" 
+                md-search-text="placementSearch" 
+                md-items="placement in dropdownFilter(dropdownOptions['placement'],placementSearch)"
+                    md-item-text="placement" 
+                    md-min-length="0" 
+                    md-floating-label="Placering">
                     <md-item-template>
-                        <span md-highlight-text="placementSearch" md-highlight-flags="gi">{{placement.displayName}}</span>
+                        <span md-highlight-text="placementSearch" md-highlight-flags="gi">{{placement}}</span>
                     </md-item-template>
                 </md-autocomplete>
-                <md-tooltip md-direction="top" md-delay="500" ng-if="searchParams.placement != null">{{searchParams.placement.displayName}}</md-tooltip>
+                <md-tooltip md-direction="top" md-delay="500" ng-if="searchParams.placement != null">{{searchParams.placement}}</md-tooltip>
             </div>
 
         </div>
         <div layout="row">
             <div flex="45">
-                <md-autocomplete md-selected-item="searchParams.sanctionProposal" md-search-text="sanctionProposalSearch" md-items="sanctionProposal in dropdownFilter(dropdownOptions['sanctionProposal'],sanctionProposalSearch,['displayName'])"
-                    md-item-text="sanctionProposal.displayName" md-min-length="0" md-floating-label="Sanktionsforslag">
+                <md-autocomplete 
+                md-selected-item="searchParams.sanctionProposal" 
+                md-search-text="sanctionProposalSearch" 
+                md-items="sanctionProposal in dropdownFilter(dropdownOptions['sanctionProposal'],sanctionProposalSearch)"
+                    md-item-text="sanctionProposal" 
+                    md-min-length="0" 
+                    md-floating-label="Sanktionsforslag">
                     <md-item-template>
-                        <span md-highlight-text="sanctionProposalSearch" md-highlight-flags="gi">{{sanctionProposal.displayName}}</span>
+                        <span md-highlight-text="sanctionProposalSearch" md-highlight-flags="gi">{{sanctionProposal}}</span>
                     </md-item-template>
                 </md-autocomplete>
-                <md-tooltip md-direction="top" md-delay="500" ng-if="searchParams.sanctionProposal != null">{{searchParams.sanctionProposal.displayName}}</md-tooltip>
+                <md-tooltip md-direction="top" md-delay="500" ng-if="searchParams.sanctionProposal != null">{{searchParams.sanctionProposal}}</md-tooltip>
             </div>
 
-            <md-autocomplete flex="45" flex-offset="10" md-selected-item="searchParams.diagnosis" md-search-text="diagnosisSearch" md-items="diagnosis in dropdownFilter(dropdownOptions['diagnosis'],diagnosisSearch,['displayName'])"
-                md-item-text="diagnosis.displayName" md-min-length="0" md-floating-label="Diagnose">
+            <md-autocomplete flex="45" 
+            flex-offset="10" 
+            md-selected-item="searchParams.diagnosis" 
+            md-search-text="diagnosisSearch" 
+            md-items="diagnosis in dropdownFilter(dropdownOptions['diagnosis'],diagnosisSearch)"
+                md-item-text="diagnosis" 
+                md-min-length="0" 
+                md-floating-label="Diagnose">
                 <md-item-template>
-                    <span md-highlight-text="diagnosisSearch" md-highlight-flags="gi">{{diagnosis.displayName}}</span>
+                    <span md-highlight-text="diagnosisSearch" md-highlight-flags="gi">{{diagnosis}}</span>
                 </md-item-template>
             </md-autocomplete>
         </div>
@@ -57,7 +74,7 @@
             </md-input-container>
 
             <div flex-offset="10">
-                <md-checkbox ng-model="searchParams.PsychEval">
+                <md-checkbox ng-model="searchParams.psychEval">
                     Psykologisk undersøgelse foretaget
                 </md-checkbox>
             </div>
@@ -67,40 +84,42 @@
             <div layout="row" flex="45">
                 <md-input-container>
                     <label>Ventetid</label>
-                    <md-select ng-model="searchParams.waitingTime">
-                        <md-option value="Passiv ventetid">
+                    <md-select ng-model="searchParams.waitingTime.time">
+                        <md-option value="passive">
                             Passiv ventetid
                         </md-option>
-                        <md-option value="Aktiv ventetid">
+                        <md-option value="active">
                             Aktiv ventetid
                         </md-option>
-                        <md-option value="Samlet ventetid">
+                        <md-option value="total">
                             Samlet ventetid
                         </md-option>
+                        <md-option value=""></md-option>
                     </md-select>
                 </md-input-container>
 
                 <md-input-container flex-offset="5">
-                    <md-select ng-model="searchParams.waitingTimeModifier" aria-label="modifier">
-                        <md-option value="Over">
+                    <md-select ng-model="searchParams.waitingTime.modifier" aria-label="modifier">
+                        <md-option value="over">
                             Over
                         </md-option>
-                        <md-option value="Under">
+                        <md-option value="under">
                             Under
                         </md-option>
-                        <md-option value="Lig med">
+                        <md-option value="equal">
                             Lig med
                         </md-option>
+                        <md-option value=""></md-option>
                     </md-select>
                 </md-input-container>
 
                 <md-input-container flex-offset="5">
-                    <input ng-model="searchParams.waitingDays" size="4" aria-label="antal dage">
+                    <input ng-model="searchParams.waitingTime.days" size="4" aria-label="antal dage">
                 </md-input-container>
                 dage
             </div>
             <div flex="45" flex-offset="10">
-                <md-checkbox ng-model="searchParams.declaration">
+                <md-checkbox ng-model="searchParams.closed">
                     Erklæring afgivet
                 </md-checkbox>
             </div>
@@ -117,8 +136,54 @@
                 <md-datepicker ng-model="searchParams.toDate"></md-datepicker>
             </md-input-container>
         </div>
-        <md-button ng-click="advancedSearch()">
+        <md-button ng-click="advancedSearch(searchParams); toggleResults()">
             Søg
         </md-button>
     </div>
 </div>
+
+
+  <md-card ng-show="results">
+  <md-card-title>
+      <md-button ng-click="toggleResults()">Ret søgning</md-button>
+  </md-card-title>
+    <md-card-content>
+    <md-table-container>
+            <table md-table  md-row-select multiple>
+                <thead md-head md-order="caseNumber">
+                    <tr md-row>
+                        <th md-column md-numeric md-order-by="caseNumber">Sagsnummer</th>
+                        <th md-column md-order-by="fullName">Navn</th>
+                        <th md-column md-numeric md-order-by="cprNumber">CPR</th>
+                        <th md-column md-order-by="">Læge</th>
+                        <th md-column md-order-by="">Erklæring afgivet</th>
+                        <th md-column md-order-by="">Psykologisk evaluering</th>
+                        <th md-column md-order-by="" ng-if="searchParams.mainCharge">Hovedsigtelse</th>
+                        <th md-column md-order-by="" ng-if="searchParams.placement">Placering</th>
+                        <th md-column md-order-by="" ng-if="searchParams.sanctionProposal">Sanktionsforslag</th>
+                        <th md-column md-order-by="" ng-if="searchParams.diagnosis">Sanktionsforslag</th>
+                    </tr>
+                </thead>
+                <tbody md-body ng-repeat="case in advancedSearchResults">
+                    <tr md-row ng-click="gotoCase(case.caseNumber)">
+                        <td md-cell>{{case.caseNumber}}</td>
+                        <td md-cell>{{case.fullName}}</td>
+                        <td md-cell>{{case.cprNumber}}</td>
+                        <td md-cell>{{case.doctor}}</td>
+                        <td md-cell>
+                            <span ng-if="case.closed == 'closed'">Afsluttet</span>
+                            <span ng-if="case.closed == 'no-declaration'">
+                                Afsluttet uden erklæring: {{case.reason}}<br>
+                                Sendt til: {{case.sentTo}}
+                            </span>
+                        </td>
+                        <td md-cell>{{case.psychologist}}</td>
+                        <td md-cell ng-if="searchParams.mainCharge">{{case.mainCharge}}</td>
+                        <td md-cell ng-if="searchParams.placement">{{case.placement}}</td>
+                        <td md-cell ng-if="searchParams.diagnosis">{{case.diagnosis}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </md-table-container>
+    </md-card-content>
+</md-card>  
