--- a/app/src/declaration/view/waitinglist.html
+++ b/app/src/declaration/view/waitinglist.html
@@ -1,17 +1,17 @@
   <md-card>
     <md-card-content>
     <md-table-container>
-            <table md-table  md-row-select multiple>
-                <thead md-head md-order="caseNumber">
+            <table md-table>
+                <thead md-head md-order="query.order">
                     <tr md-row>
                         <th md-column md-numeric md-order-by="caseNumber">Sagsnummer</th>
                         <th md-column md-order-by="fullName">Navn</th>
                         <th md-column md-numeric md-order-by="cprNumber">CPR</th>
-                        <th md-column md-numeric>Oprettet</th>
-                        <th md-column md-numeric>Ventetid (dage)</th>
+                        <th md-column md-numeric md-order-by="creationDate">Oprettet</th>
+                        <th md-column md-numeric md-order-by="creationDate">Ventetid (dage)</th>
                     </tr>
                 </thead>
-                <tbody md-body ng-repeat="case in waitingListCases">
+                <tbody md-body ng-repeat="case in waitingListCases | orderBy: query.order">
                     <tr md-row ng-click="gotoCase(case.caseNumber)">
                         <td md-cell>{{case.caseNumber}}</td>
                         <td md-cell>{{case.fullName}}</td>
