lock cases when used, and reopen them when leaving

--- a/app/src/declaration/view/lock-dialog.html
+++ b/app/src/declaration/view/lock-dialog.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="Lås sagen">
-    <form name="lockDeclarationForm" ng-submit="lockCase()">
+    <form name="lockDeclarationForm" ng-submit="closeCase()">
 
         <md-toolbar>
             <div class="md-toolbar-tools">
