--- a/app/src/declaration/view/documents.html
+++ b/app/src/declaration/view/documents.html
@@ -13,17 +13,17 @@
 <md-card ng-show="tableView && contentLength > 0">
     <md-card-content>
         <md-table-container>
-            <table md-table md-row-select multiple>
-                <thead md-head>
+            <table md-table>
+                <thead md-head md-order="query.order">
                     <tr md-row>
                         <th md-column></th>
-                        <th md-column>Name</th>
-                        <th md-column md-numeric>Date modified</th>
-                        <th md-column md-numeric>Modified by</th>
+                        <th md-column md-order-by="name">Name</th>
+                        <th md-column md-numeric md-order-by="lastChanged">Date modified</th>
+                        <th md-column md-order-by="lastChangedBy">Modified by</th>
                     </tr>
                 </thead>
                 <tbody md-body ng-repeat="content in contents">
-                    <tr md-row md-select="dessert" md-select-id="name" md-auto-select ng-repeat="c in content">
+                    <tr md-row ng-repeat="c in content | orderBy: query.order">
                         <td md-cell><md-checkbox aria-label="Checkbox {{c.shortRef}}" ng-model="c.shortRef" ng-click="selectedFile(c)"></md-checkbox></td>
                         <td md-cell>{{c.name}}</td>
                         <td md-cell>{{c.lastChanged | customDate}}</td>
